--- a/Application/Application/Base.lproj/MainMenu.xib
+++ b/Application/Application/Base.lproj/MainMenu.xib
@@ -19,12 +19,34 @@
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
-                <menuItem title="Application Helper" id="1Xt-HY-uBw">
+                <menuItem title="Application Helper" id="1Xt-HY-uBw" userLabel="BlockBlock">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Application Helper" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
-                            <menuItem title="About" id="hde-3g-V2v">
+                            <menuItem title="Rules" id="l0V-ZX-X8S">
                                 <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="showRules:" target="Voe-Tx-rLC" id="Xqt-cr-d9F"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Preferences" id="yfe-lu-f3I">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="showPreferences:" target="Voe-Tx-rLC" id="0UK-iW-u9N"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem isSeparatorItem="YES" id="3Oo-ON-R9s"/>
+                            <menuItem title="About BlockBlock" id="RPu-ap-wNj" userLabel="About LuLu">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="showAbout:" target="Voe-Tx-rLC" id="oP6-qI-N7R"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem isSeparatorItem="YES" id="H15-vt-Gha"/>
+                            <menuItem title="Close Window" keyEquivalent="w" id="rfE-3I-qPr" userLabel="Close Window">
+                                <connections>
+                                    <action selector="closeWindow:" target="Voe-Tx-rLC" id="ZJI-gi-QEX"/>
+                                </connections>
                             </menuItem>
                         </items>
                     </menu>
