improved XPC, installer, etc.
converted XPC calls to synchronous (where response data is requested)
reworked installer to address Full Disk Access issues

--- a/Installer/Source/ConfigureWindowController.xib
+++ b/Installer/Source/ConfigureWindowController.xib
@@ -10,7 +10,10 @@
                 <outlet property="activityIndicator" destination="b1w-5W-ayX" id="P5e-PO-Ozi"/>
                 <outlet property="diskAccessButton" destination="Xfy-pO-bPJ" id="Y96-Sg-svZ"/>
                 <outlet property="diskAccessView" destination="8vS-7f-v27" id="ahv-e7-iub"/>
+                <outlet property="fdaActivityIndicator" destination="goS-M0-vWy" id="Xvx-W8-7Ev"/>
+                <outlet property="fdaMessage" destination="wH6-TW-h1P" id="Yx4-hi-ish"/>
                 <outlet property="installButton" destination="553-2y-kvm" id="nxf-wO-EI3"/>
+                <outlet property="issuesButton" destination="6nx-nf-Lpb" id="veM-dT-fZD"/>
                 <outlet property="moreInfoButton" destination="QWu-qZ-Za2" id="8kC-Ga-5oJ"/>
                 <outlet property="statusMsg" destination="SpB-Xc-WlB" id="jlm-ke-XfM"/>
                 <outlet property="supportButton" destination="pM7-Wp-KdU" id="fez-2X-gLE"/>
@@ -163,6 +166,30 @@
                         <color key="backgroundColor" name="quaternaryLabelColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wH6-TW-h1P">
+                    <rect key="frame" x="711" y="105" width="284" height="18"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textFieldCell key="cell" lineBreakMode="clipping" title="Waiting for Full Disk Access..." id="08d-fd-1uE">
+                        <font key="font" size="15" name="Menlo-Regular"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <progressIndicator hidden="YES" wantsLayer="YES" fixedFrame="YES" maxValue="100" indeterminate="YES" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="goS-M0-vWy">
+                    <rect key="frame" x="662" y="98" width="32" height="32"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                </progressIndicator>
+                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6nx-nf-Lpb">
+                    <rect key="frame" x="543" y="13" width="85" height="32"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <buttonCell key="cell" type="push" title="Issues?" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="WdC-Zi-mMl">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="fdaIssues:" target="-2" id="ZWQ-LP-dd3"/>
+                    </connections>
+                </button>
             </subviews>
             <point key="canvasLocation" x="440.5" y="323"/>
         </customView>
