unregister daemon during uninstall

--- a/Installer/Source/ConfigureWindowController.xib
+++ b/Installer/Source/ConfigureWindowController.xib
@@ -245,7 +245,7 @@
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Love" id="XVu-Se-XIZ"/>
                 </imageView>
                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" preferredMaxLayoutWidth="660" translatesAutoresizingMaskIntoConstraints="NO" id="rZP-Kv-aYd">
-                    <rect key="frame" x="144" y="133" width="500" height="88"/>
+                    <rect key="frame" x="144" y="136" width="500" height="88"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="It's free, open-source, and written by a single (mac-loving) coder!" id="t59-FX-o48">
                         <font key="font" size="32" name="AvenirNextCondensed-Regular"/>
@@ -254,14 +254,14 @@
                     </textFieldCell>
                 </textField>
                 <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="LND-q5-8OB">
-                    <rect key="frame" x="625" y="295" width="66" height="52"/>
+                    <rect key="frame" x="623" y="295" width="66" height="52"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsAiro" id="pUg-ax-ylI"/>
                 </imageView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="p2X-s1-G1Y">
                     <rect key="frame" x="497" y="313" width="118" height="29"/>
                     <autoresizingMask key="autoresizingMask"/>
-                    <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Special Mahalo to :" id="jL7-3C-DVF">
+                    <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Special mahalo to :" id="jL7-3C-DVF">
                         <font key="font" size="15" name="AvenirNextCondensed-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
