--- a/Application/Application/Base.lproj/MainMenu.xib
+++ b/Application/Application/Base.lproj/MainMenu.xib
@@ -23,23 +23,23 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Application Helper" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
-                            <menuItem title="Rules" id="l0V-ZX-X8S">
+                            <menuItem title="About BlockBlock" id="RPu-ap-wNj">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="showAbout:" target="Voe-Tx-rLC" id="oP6-qI-N7R"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem isSeparatorItem="YES" id="3Oo-ON-R9s"/>
+                            <menuItem title="Rules..." id="l0V-ZX-X8S">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="showRules:" target="Voe-Tx-rLC" id="Xqt-cr-d9F"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Preferences" id="yfe-lu-f3I">
+                            <menuItem title="Preferences..." id="yfe-lu-f3I">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="showPreferences:" target="Voe-Tx-rLC" id="0UK-iW-u9N"/>
-                                </connections>
-                            </menuItem>
-                            <menuItem isSeparatorItem="YES" id="3Oo-ON-R9s"/>
-                            <menuItem title="About BlockBlock" id="RPu-ap-wNj">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <connections>
-                                    <action selector="showAbout:" target="Voe-Tx-rLC" id="oP6-qI-N7R"/>
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="H15-vt-Gha"/>
